--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -5,7 +5,6 @@
     justify-content: center;
     flex-direction: row;
     width: 100%;
-
     max-height:  15%;
 }
 
@@ -32,6 +31,7 @@
 
 a {
     text-decoration: none;
+    color: #252525
 }
 
 
