--- a/frontend/src/components/List/styles.css
+++ b/frontend/src/components/List/styles.css
@@ -1,12 +1,19 @@
 .list-container {
     width: 70%;
-    border: 3px solid #252525;
-    padding: 10px;
+    border: 3px solid rgba(0,0,0,0.6);
+    border-radius: 15px;
+    padding: 20px;
     display: flex;
     align-items: center;
+    margin-top: 15px;
     justify-content: space-around;
 }
 
 .ListItem {
     width: 200px;
+}
+
+.ListItem:hover{
+    transition: 0.3s;
+    opacity: 0.6
 }
