--- a/frontend/src/components/ListItem/styles.css
+++ b/frontend/src/components/ListItem/styles.css
@@ -1,8 +1,31 @@
 .ListItem {
-    width: 200px;
+    width: 185px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 15px;
 }
 
 .ListItem img {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
+
+}
+
+.span{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.ListItem p{
+    font-size: 18px;
+}
+
+.overlay:hover{
+    transition: 0.4s;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
 }
