--- a/frontend/src/components/ListItem/styles.css
+++ b/frontend/src/components/ListItem/styles.css
@@ -1,10 +1,11 @@
 .ListItem {
-    width: 185px;
+    width: 16%;
     height: auto;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: wrap;
     border-radius: 15px;
 }
 
@@ -22,6 +23,15 @@
 .ListItem p{
     font-size: 18px;
 }
+
+.button  {
+    border-radius: 15px;
+    padding: 6px;
+    background: greenyellow;
+    color: #fff;
+    font-size: 18px;
+}
+
 
 .overlay:hover{
     transition: 0.4s;
